--- a/app/build.gradle
+++ b/app/build.gradle
@@ -27,10 +27,13 @@ dependencies {
     implementation 'com.google.guava:guava:30.1.1-jre'
 
     // Use Scalatest for testing our library
-    testImplementation 'junit:junit:4.13.2'
+    // testImplementation 'junit:junit:4.13.2'
+    testImplementation 'org.junit.jupiter:junit-jupiter:5.7.0' 
     testImplementation 'org.scalatest:scalatest_2.13:3.2.9'
     testImplementation 'org.scalatestplus:junit-4-13_2.13:3.2.2.0'
-
+    testImplementation("com.approvaltests:approvaltests:13.3.0")
+    testImplementation("com.google.code.gson:gson:2.8.9") 
+    
     // Need scala-xml at test runtime
     testRuntimeOnly 'org.scala-lang.modules:scala-xml_2.13:1.2.0'
 }
