--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,3 +15,24 @@ jobs:
         uses: gradle/gradle-build-action@v2.1.3
       - name: run_tests
         run: ./run_tests.sh
+  auto-merge:
+    needs: build
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out repo
+        uses: actions/checkout@v2.4.0
+      - name: auto-merge
+        if: |
+          github.actor == 'dependabot[bot]' &&
+          github.event_name == 'pull_request'
+        run: |
+          if [[ -z "${GITHUB_TOKEN}" ]]; then
+            gh pr merge --auto --rebase "$PR_URL"
+          else
+            echo 'if you want github to automatically merge pull requests from dependdabot, you need to create a' 
+            echo 'personal access token (public_repo) and assign it to setings -> secrets -> dependabot -> GH_ACTION_TOKEN'
+          fi
+        env:
+          PR_URL: ${{github.event.pull_request.html_url}}
+          # this secret needs to be in the settings.secrets.dependabot
+          GITHUB_TOKEN: ${{secrets.GH_ACTION_TOKEN}}
